fixed : removed letter-spacing to font affecting button style

--- a/assets/front/scss/_typography.scss
+++ b/assets/front/scss/_typography.scss
@@ -1,4 +1,3 @@
 .#{$project-prefix}service-font {
   font-family: $serviceFont;
-  letter-spacing: 1px;
 }
